# coresyn2chart

./: coresyn2chart.cabal  flake.nix
app/: Main.hs
src/Syn2Chart/: Plugin.hs  Traversal.hs  Types.hs
test/: Main.hs
